Fix subtask alignment

--- a/src/scss/tasks.scss
+++ b/src/scss/tasks.scss
@@ -101,6 +101,7 @@
 .task-checkbox {
     float: left;
     margin-left: -24px;
+    margin-right: 8px;
 }
 
 .task-labels {
@@ -144,7 +145,7 @@
 
 .subtasks {
     margin-top: 4px;
-    margin-left: 20px;
+    margin-left: 24px;
 }
 
 .subtask {
